# prediccionesFIFA19

./: .gitignore  README.md  pyproject.toml
assets/pruebasModelos/: Wage_random_forest_regressor
config/: config.yaml  load_config.py
functions/: entrenamiento.py  machineLearning.py  machine_learning.py  machine_learning_classification.py  machine_learninge_utils.py  obtener_variables_predictoras.py
logs/: logging.conf
plots/: plot_results.py  plots_explicativas.py
reports/pca/: pca_2comps.csv  pca_3comps.csv  pca_4comps.csv
reports/resultados_csv/: Position.csv  PositionGrouped.csv  PositionSinLado.csv  Value.csv  Wage.csv
reports/resultados_entrenamiento_cv/: Position.json  PositionGrouped.json  PositionSinLado.json  Value.json  Wage.json
reports/resultados_finales/: Position.json  PositionGrouped.json  PositionSinLado.json  Value.json  Wage.json
src/: analizar_metricas.py  forecast.py  main.py  plots.py  train_all.py  train_one_model_classfication.py  train_one_model_regression.py
src/functions/: entrenamiento.py  functions_clustering.py  machine_learning.py  machine_learninge_utils.py  obtener_variables_predictoras.py  plots.py
src/index/: analizar_metricas.py  clustering.py  plot_results.py  plots_explicativas.py  predict.py  train_all.py  train_one_model_classfication.py  train_one_model_regression.py
src/utils/: load_config.py  preprocess_pandas.py  report_model_results.py
utils/: funcionesMatematicas.py  preprocess_pandas.py  report_model_results.py
