[tool.poetry]
name = "FIFA_machine_learning"
version = "0"
description = "Modelos de machin learning sobre dataframe de jugadores de FIFA 19"
authors = ["manuel <manu.paz.pintor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
